--- a/reset.css
+++ b/reset.css
@@ -120,7 +120,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
+  content: "";
   content: none;
 }
 
@@ -132,4 +132,8 @@ table {
 a {
   color: black;
   text-decoration: none;
+}
+
+input {
+  all: unset;
 }
