--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 
 /* * Global Styles */
 
+html {
+  font-size: 16px;
+}
+
 body {
   font-size: 1rem;
   font-family: 'Iter', sans-serif;
@@ -17,7 +21,7 @@ body {
 
 h1 {
   font-weight: 900;
-  font-size: 3rem;
+  font-size: 4rem;
   line-height: 3.75rem;
 }
 
@@ -26,14 +30,14 @@ input {
   font-size: 0.85rem;
   font-style: normal;
   font-weight: 400;
-  font-size: 1.125rem;
+  font-size: 1rem;
   line-height: 2rem;
   color: #fff;
 }
 
 select,
 option {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Iter', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 1.125rem;
@@ -48,11 +52,6 @@ label {
   color: #9a9ca7;
 }
 
-.average-label {
-  color: #fff;
-  font-size: 1.125rem;
-  line-height: 2rem;
-}
 
 h2 {
   font-weight: 200;
@@ -85,7 +84,7 @@ h4 {
   border-radius: 6px;
   padding: 0.1rem 1.25rem;
   margin-top: 1.25rem;
-  transition: 0.45s ease;
+  transition: 0.35s ease;
   font-family: 'Inter';
   text-align: center;
 }
@@ -93,6 +92,7 @@ h4 {
 .button:hover {
   background-color: #b6462d;
   border: 1px solid #a34a35;
+  cursor: pointer;
 }
 
 /* * Main styles */
@@ -100,17 +100,20 @@ h4 {
 .app {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  justify-content: space-around;
-  align-items: center;
+  gap: 2rem;
+  justify-content: center;
+  align-items: flex-start;
   margin-top: 5rem;
+  margin-left: 5rem;
 }
 
 .inputs {
   display: flex;
   flex-direction: row;
+  justify-content: flex-start;
   gap: 2rem;
-  margin-top: 2rem;
+  padding-bottom: 2rem;
+  width: 80%;
 }
 
 form {
@@ -122,7 +125,9 @@ form {
   background: #292d31;
   border-radius: 16px;
   padding: 3rem;
-  width: 16rem;
+  max-width: 20rem;
+  flex-shrink: 0;
+
 }
 
 .results {
@@ -130,18 +135,18 @@ form {
   flex-direction: column;
   gap: 0.75rem;
   padding: 0 2rem;
-  width: 20rem;
+  /* flex-shrink: 1; */
+
 }
 
 header {
   display: flex;
 }
 
+
 /* * Styling the form */
 
-input {}
-
-/* ? Killing Chrome, Safari, Edge, Opera input arrows */
+/* ? Killing Chrome, Safari, Edge, Opera input arrows for number type input */
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -158,11 +163,16 @@ input[type='number'] {
 .input-field {
   background-color: #292d31;
   color: white;
-  border: 1px solid #6d6d75;
+  border: .5px solid #6d6d75;
   border-radius: 5px;
   padding: 0.25rem 0;
   padding-left: 1.25rem;
   padding-right: 0.5rem;
+  transition: .35s ease;
+}
+
+.input-field:hover {
+  border: 1px solid rgb(177, 176, 176);
 }
 
 .input-field:focus {
@@ -170,11 +180,189 @@ input[type='number'] {
 }
 
 .dropdown {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding-top: 0.56rem;
+  padding-bottom: 0.56rem;
+  line-height: 2rem;
+
+}
+
+select {
+  line-height: 2rem;
+  box-shadow: 0 10px 55px rgba(219, 218, 218, 0.065);
 }
 
 option {
-  padding: 0.25rem 0;
   padding-left: 1.25rem;
+  border-radius: 10px;
+}
+
+/* * Adaptive tweeks */
+
+@media screen and (max-width: 850px) {
+
+  .app {
+    margin-top: 4rem;
+    margin-left: 4rem;
+  }
+
+  .results {
+    gap: 0.75rem;
+    margin: 0;
+    padding-left: 1rem;
+    width: 100%;
+  }
+
+}
+
+@media screen and (max-width: 650px) {
+
+  h1 {
+    font-size: 3.15rem;
+  }
+
+  h3 {
+    font-size: 4rem;
+  }
+
+  .app {
+    margin-left: 0;
+    justify-content: center;
+    align-items: center;
+
+  }
+
+  .inputs {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: flex-start;
+    max-width: 100%;
+    gap: 1.5rem;
+  }
+
+  .results {
+    gap: 0.35rem;
+    max-width: 80%;
+    padding: 0;
+
+  }
+
+  form {
+    width: 100%;
+  }
+
+  .input {
+    max-width: 12rem;
+  }
+
+}
+
+@media screen and (max-width: 540px) {
+  form {
+    /* margin-right: 1rem; */
+    width: 60%;
+    margin: 0
+  }
+
+  header {
+    width: 90%;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+  }
+
+  h1 {
+    font-size: 2.9rem;
+  }
+
+  .inputs {
+    margin: 0;
+    width: 100%;
+  }
+
+  .results {
+    gap: .25rem;
+  }
+
+  .app {
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 2rem;
+    gap: 1rem;
+  }
+
+  .dropdown {
+    padding-top: .6rem;
+    padding-bottom: .6rem;
+    line-height: 1.2rem;
+  }
+
+}
+
+@media screen and (max-width: 430px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  header {
+    width: 95%;
+  }
+
+  form {
+    padding: 2.25rem;
+    padding-top: 2rem
+  }
+
+  .tripcostbox,
+  .fuelcostbox {
+    margin-left: .75rem;
+  }
+
+
+}
+
+@media screen and (max-width: 410px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  header {
+    width: 95%;
+  }
+
+  form {
+    padding: 2.25rem;
+    padding-top: 2rem
+  }
+
+
+}
+
+
+@media screen and (max-width: 380px) {
+  h1 {
+    font-size: 2rem;
+  }
+
+  header {
+    width: 90%;
+  }
+
+  h3 {
+    font-size: 3rem;
+    line-height: 3.5rem;
+  }
+
+  form {
+    padding: 1.85rem;
+    padding-top: 1.25rem
+  }
+
+  .inputs {
+    gap: .66rem;
+  }
+
+  .results {
+    gap: .25rem;
+  }
 }
